[tool.poetry]
name = "offstreet-parking"
version = "0.1.0"
description = "A tool to fetch and upload offstreet parking data to NIPKaart."
authors = ["NIPKaart <hello@nipkaart.nl>"]
maintainers = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nipkaart/offstreet-parking"
repository = "https://github.com/nipkaart/offstreet-parking"
documentation = "https://github.com/nipkaart/offstreet-parking"
keywords = ["offstreet", "parking", "nipkaart", "locations", "api"]
packages = [
  { include = "app" },
]

[tool.poetry.dependencies]
pymysql = "^1.1.0"
python = "^3.11"
python-dotenv = "^1.0.0"
pytz = "^2024.1"

[tool.poetry.group.cities.dependencies]
hamburg = "^3.0.0"
odp-amsterdam = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"
pre-commit-hooks = "4.6.0"
pylint = "3.2.3"
ruff = "0.4.10"
yamllint = "1.35.1"

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
  "too-few-public-methods",
  "too-many-arguments",
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "broad-except",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "T201", # Allow the use of print()

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
